# student_accommodation_final_23-11-2025

./: .ebignore  .gitignore  Procfile  create_secret.py  manage.py  requirements.txt  test_sns.py
.ebextensions/: django.config
.github/workflows/: deploy.yml
accommodation/: .~c9_invoke_D7EJLn.py  admin.py  apps.py  forms.py  middleware.py  models.py  sns_utils.py  sqs_utils.py  upload_accommodation_image.html  urls.py  views.py
accommodation/migrations/: 0001_initial.py  0002_remove_accommodation_amenities_and_more.py  0003_accommodation_image.py  0004_festivaldiscount.py  0005_accommodation_discount_festivaldiscount_active.py  0006_rename_discount_accommodation_festival_discount_and_more.py  0007_booking_discount_applied_booking_final_price_and_more.py  0008_alter_festivaldiscount_percentage.py
accommodation/static/accommodation/css/: style.css
accommodation/templates/: base.html
accommodation/templates/accommodation/: accommodation_detail.html  accommodation_list.html  booking_confirmation.html  booking_form.html  my_bookings.html  room_list.html
accommodation/templates/registration/: logged_out.html  login.html  register.html
lambda/: lambda_function.py
studentacc/: asgi.py  settings.py  startup.py  urls.py  wsgi.py
studentaccommodationlib/: pyproject.toml  setup.py
studentaccommodationlib/src/studentaccommodationpkg/: festival_discount.py
studentaccommodationlib/src/studentaccommodationpkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
