[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "studentaccommodationpkg"
version = "0.1.0"
description = "Custom Festival Discount Library for Student Accommodation Project"
authors = [
  { name = "Harish K", email = "kharish820414@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["aws", "django", "student accommodation", "festival discount", "s3", "sns", "sqs"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "boto3"
]

[tool.setuptools.packages.find]
where = ["src"]
